--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="~/HTMLCSS/CSS/Index.css">
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/Index.css" />
     <title>CENAI</title>
 </head>
-<body div class="bg">
-    <section>
-        <main>
-            <div class="txt_wall">
-
-            </div>
-        </main>
-    </section>
-    
+<body>
+        
+    <form>
+        <div class="login">
+            <center>
+                <tagline>Bem-vindo!</tagline><br />
+                <input type="text" id="user" placeholder="USUÁRIO" /><br />
+                <input type="password" id="senha" placeholder="SENHA" /><br />
+                <button type="submit">LOGIN</button><br />
+            </center>
+        </div>
+    </form>
 </body>
 </html>
