--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -12,9 +12,10 @@
     <form>
         <div class="login">
             <center>
+                <img src="~/IMG/cenai.png" /><br />
                 <tagline>Bem-vindo!</tagline><br />
-                <input type="text" id="user" placeholder="USUÁRIO" /><br />
-                <input type="password" id="senha" placeholder="SENHA" /><br />
+                <input type="email" id="emailid" class="campo_email" placeholder="xyz@gmail.com" required/><br />
+                <input type="password" id="senhaid" class="campo_senha" placeholder="12345678" minlength="6"required/><br />
                 <button type="submit">LOGIN</button><br />
             </center>
         </div>
