--- a/Projeto_Final/HTMLCSS/CSS/Index.css
+++ b/Projeto_Final/HTMLCSS/CSS/Index.css
@@ -26,14 +26,22 @@ form {
     margin: -70px 0 0 -170px;
 }
 input[type=email], input[type=password] {
-    background-color:#e6e6e6 ;
+    background-color: #e6e6e6;
     border: none;
     width: 200px;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
     border-radius: 5px;
-
+}
+input[type=text], input[type=tel], select {
+    background-color: #e6e6e6;
+    border: none;
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 5px;
 }
 
 button {
