--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="~/HTMLCSS/CSS/Index.css" />
     <title>CENAI</title>
 </head>
-<body>
-        
+<body div class="bg">
     <form>
-        <div class="login">
-            <center>
-                <img src="~/IMG/cenai.png" /><br />
-                <tagline>Bem-vindo!</tagline><br />
-                <input type="email" id="emailid" class="campo_email" placeholder="xyz@gmail.com" required/><br />
-                <input type="password" id="senhaid" class="campo_senha" placeholder="12345678" minlength="6"required/><br />
-                <button type="submit">LOGIN</button><br />
-            </center>
+        <div class="container">
+            <div class="login">
+                <center>
+                    <img src="~/IMG/cenai.png" /><br />
+                    <tagline>Bem-vindo!</tagline><br />
+                    <input type="email" id="emailid" class="campo_email" placeholder="xyz@gmail.com" required /><br />
+                    <input type="password" id="senhaid" class="campo_senha" placeholder="12345678" minlength="6" required /><br />
+                    <button type="submit">LOGIN</button><br />
+                </center>
+
+            </div>
         </div>
     </form>
 </body>
