--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -8,6 +8,7 @@
     <title>CENAI</title>
 </head>
 <body div class="bg">
+
     <form>
         <div class="container">
             <div class="login">
@@ -22,5 +23,7 @@
             </div>
         </div>
     </form>
+
+    <script src="~/JS/Index.js"></script>
 </body>
 </html>
