--- a/Projeto_Final/HTMLCSS/registro_temp1.cshtml
+++ b/Projeto_Final/HTMLCSS/registro_temp1.cshtml
@@ -2,6 +2,12 @@
 @{
     BancoDeDados.DBConnect();
     pessoa Pessoa = new pessoa();
+    Pessoa.cpf = Request.Form["cpfid"];
+    Pessoa.nome = Request.Form["nomeid"];
+    Pessoa.genero = Request.Form["genid"];
+    Pessoa.telefone = Request.Form["telid"];
+    Pessoa.senha = Request.Form["senhaid2"];
+
 }
 
 <!DOCTYPE html>
@@ -15,14 +21,14 @@
 </head>
 <body div class="bg">
 
-    <form  method="post" onsubmit="return checkPassword(this)" action="~/HTMLCSS/registro_temp1.cshtml">
+    <form method="post">
         <div class="container">
             <div class="registro">
                 <center>
                     <div class="tipo_reg">
-                        <select name="tipo_reg" id="regid" onselect="unHide()" required>
+                        <select name="tipo_reg" id="regid" required>
                             <option value="aluno">ALUNO</option>
-                            <option value="profe" >PROFESSOR</option>
+                            <option value="profe">PROFESSOR</option>
                             <option value="colabo">COLABORADOR</option>
                         </select><br />
 
@@ -35,13 +41,13 @@
                     <input type="text" id="cpfid" class="campo_cpf"
                            placeholder="CPF do ..." maxlength="14" required /><br />
                     <!--GENERO-->
-                    <input type="radio" id="genid1" name="gen"
+                    <input type="radio" id="genid" name="gen"
                            class="campo_genero1" value="Masculino" required />
                     <label for="genid1">Masculino</label><br />
-                    <input type="radio" id="genid2" name="gen" class="campo_genero2"
+                    <input type="radio" id="genid" name="gen" class="campo_genero2"
                            value="Feminino" required />
                     <label for="genid1">Feminino</label><br />
-                    <input type="radio" id="genid3" name="gen" class="campo_genero3"
+                    <input type="radio" id="genid" name="gen" class="campo_genero3"
                            value="Outro" required />
                     <label for="genid1">Outro</label><br />
                     <!--TELEFONE-->
@@ -54,8 +60,7 @@
                     <input type="password" id="senhaid2" class="campo_senha2"
                            placeholder="verifique senha" minlength="6" required /><br />
                     <!--ENVIAR-->
-                    <input type="text" id="teste" hidden/>
-                    <button >REGISTRAR</button><br />
+                    <button>REGISTRAR</button><br />
                 </center>
 
             </div>
