--- a/Projeto_Final/HTMLCSS/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/registro.cshtml
@@ -15,24 +15,27 @@
 </head>
 <body div class="bg">
 
-    <form  method="post" onsubmit="return checkPassword(this)" action="~/HTMLCSS/registro_temp1.cshtml">
+    <form  method="post" onsubmit="return checkPassword(this)" action="~/HTMLCSS/temp_reg.cshtml">
         <div class="container">
             <div class="registro">
                 <center>
-                    <div class="tipo_reg">
-                        <select name="tipo_reg" id="regid" onselect="unHide()" required>
-                            <option value="aluno">ALUNO</option>
-                            <option value="profe" >PROFESSOR</option>
-                            <option value="colabo">COLABORADOR</option>
+                    <!--NIVEL DE ACESSO-->
+                    <div class="nivel">
+                        
+                        <label for="nivacesso">Nivel de Acesso</label> 
+                        <select name="nivacesso" id="nivacesso" required>
+                            
+                            <option value="1">Usuario</option>
+                            <option value="2">Professor</option>
+                            <option value="3">Administrador</option>
                         </select><br />
 
                     </div>
-                    
                     <!--NOME-->
-                    <input type="text" id="nomeid" class="campo_nome"
+                    <input type="text" name="nomeid" id="nomeid" class="campo_nome"
                            placeholder="Nome do ..." maxlength="15" required /><br />
                     <!--CPF-->
-                    <input type="text" id="cpfid" class="campo_cpf"
+                    <input type="text" name ="cpfid" id="cpfid" class="campo_cpf"
                            placeholder="CPF do ..." maxlength="14" required /><br />
                     <!--GENERO-->
                     <input type="radio" id="genid1" name="gen"
@@ -49,13 +52,13 @@
                            placeholder="telefone/celular" minxlength="11"
                            maxlength="11" required /><br />
                     <!--SENHA-->
-                    <input type="password" id="senhaid1" class="campo_senha1"
+                    <input type="password" id="senhaid1" name="senhaid1"class="campo_senha1"
                            placeholder="senha" minlength="6" required /><br />
-                    <input type="password" id="senhaid2" class="campo_senha2"
+                    <input type="password" id="senhaid2" name="senhaid2" class="campo_senha2"
                            placeholder="verifique senha" minlength="6" required /><br />
+
                     <!--ENVIAR-->
-                    <input type="text" id="teste" hidden/>
-                    <button >REGISTRAR</button><br />
+                    <input type="submit" placeholder="REGISTRAR" /><br />
                 </center>
 
             </div>
