--- a/Projeto_Final/HTMLCSS/CSS/registro.css
+++ b/Projeto_Final/HTMLCSS/CSS/registro.css
@@ -1,9 +1,70 @@
 ﻿
 body, html {
     height: 100%;
+    position: fixed;
 }
 
 .bg {
-    background-color: #f5f4f5;
+    background-image: url(../../IMG/fundo_registro.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
+.container {
+    backdrop-filter: saturate(180%);
+    backdrop-filter: blur(999px);
+    max-width: 300px;
+    height: 500px;
+    margin-left: 800px;
+    margin-top: 100px;
+}
+
+.registro {
+    float: left;
+    width: 300px;
+    height: 500px;
+    padding: 20px;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 26px 42px rgba(0, 0, 0, 0.5);
+}
+
+label {
+    font-family: "Open Sans Hebrew", "Open Sans", sans-serif;
+    font-weight: bold;
+}
+
+input[type=email], input[type=password] {
+    background-color: #e6e6e6;
+    border: none;
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+
+input[type=text], input[type=tel], select {
+    background-color: #e6e6e6;
+    border: none;
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+input[type=submit]{
+    background-color: #c5f6f1;
+    border: none;
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+input[type=submit]:hover{
+    background-color: #b3ddd9;
+}
