--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -9,15 +9,15 @@
 </head>
 <body div class="bg">
 
-    <form>
+    <form method="post">
         <div class="container">
             <div class="login">
                 <center>
                     <img src="~/IMG/cenai.png" /><br />
                     <tagline>Bem-vindo!</tagline><br />
-                    <input type="email" id="emailid" class="campo_email" placeholder="xyz@gmail.com" required /><br />
+                    <input type="text" id="cpfid" class="campo_cpf" placeholder="CPF (apenas numeros)" maxlength="11" required /><br />
                     <input type="password" id="senhaid" class="campo_senha" placeholder="12345678" minlength="6" required /><br />
-                    <button type="submit">LOGIN</button><br />
+                    <input type="submit" placeholder="LOGAR" /><br />
                 </center>
 
             </div>
