--- a/Projeto_Final/HTMLCSS/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/registro.cshtml
@@ -15,10 +15,12 @@
     <title>CENAI</title>
 </head>
 <body div class="bg">
+    <header>
 
+    </header>
     <section>
         <aside>
-            <form method="post" onsubmit="return checkPassword(this)" action="~/HTMLCSS/temps/temp_reg.cshtml">
+            <form method="post" onsubmit="return checkPassword(this);" action="~/HTMLCSS/temps/temp_reg.cshtml">
                 <div class="container">
                     <center>
                         <div class="registro">
@@ -36,21 +38,21 @@
                             </div>
                             <!--NOME-->
                             <input type="text" name="nomeid" id="nomeid" class="campo_nome"
-                                   placeholder="Nome do ..." maxlength="25" required /><br />
+                                   placeholder="Nome Completo" maxlength="25" required /><br />
                             <!--CPF-->
-                            <input type="text" name="cpfid" id="cpfid" class="campo_cpf"
-                                   placeholder="CPF do ..." maxlength="14" required /><br />
+                            <input type="text" name="cpfid" id="cpf" class="campo_cpf"
+                                   placeholder="Insira seu CPF(apenas numeros)" maxlength="11" required /><br />
                             <!--EMAIL-->
                             <input type="email" name="emailid" id="emailid" class="campo_email"
-                                   placeholder="Email do" maxlength="30" required /><br />
+                                   placeholder="xyz@gmail.com" maxlength="30" required /><br />
                             <!--TELEFONE-->
                             <input type="tel" name="telid" class="campo_tel"
                                    placeholder="telefone/celular" minxlength="11"
                                    maxlength="14" required /><br />
                             <!--SENHA-->
-                            <input type="password" id="senhaid1" name="senhaid" class="campo_senha1"
+                            <input type="password" id="senhaid1" name="senhaid1" class="campo_senha1"
                                    placeholder="senha" minlength="6" required /><br />
-                            <input type="password" id="senhaid2" name="senhaid1" class="campo_senha2"
+                            <input type="password" id="senhaid2" name="senhaid2" class="campo_senha2"
                                    placeholder="verifique senha" minlength="6" required /><br />
 
                             <!--ENVIAR-->
