--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -1,5 +1,9 @@
-﻿<!DOCTYPE html>
-<html>
+﻿@{ 
+
+}
+
+<!DOCTYPE html>
+<html >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +12,18 @@
     <title>CENAI</title>
 </head>
 <body div class="bg">
-
     <form method="post">
         <div class="container">
             <div class="login">
                 <center>
                     <img src="~/IMG/cenai.png" /><br />
                     <tagline>Bem-vindo!</tagline><br />
-                    <input type="text" id="cpfid" class="campo_cpf" placeholder="CPF (apenas numeros)" maxlength="11" required /><br />
-                    <input type="password" id="senhaid" class="campo_senha" placeholder="12345678" minlength="6" required /><br />
-                    <input type="submit" placeholder="LOGAR" /><br />
+                    <input type="text" id="cpfid" class="campo_cpf" placeholder="CPF apenas numeros" maxlength="11" required />
+                    <br />
+                    <input type="password" id="senhaid" class="campo_senha" placeholder="senha" minlength="6" required />
+                    <br />
+                    <input type="submit" placeholder="LOGAR" />
+                    <br />
                 </center>
 
             </div>
