--- a/Projeto_Final/HTMLCSS/temps/temp_reg.cshtml
+++ b/Projeto_Final/HTMLCSS/temps/temp_reg.cshtml
@@ -9,7 +9,7 @@
     Pessoa.telefone = Request.Form["telid"];
     Pessoa.senha = Request.Form["senhaid2"];
 
-    BancoDeDados.Registro_Pessoa(Pessoa);
+    Funcoes.Registro_Pessoa(Pessoa);
 }
 
 <!DOCTYPE html>
