--- a/Projeto_Final/HTMLCSS/CSS/main.css
+++ b/Projeto_Final/HTMLCSS/CSS/main.css
@@ -1,67 +1,1 @@
-﻿body {
-    margin: 0;
-    font-family: "Lato", sans-serif;
-}
-
-.sidebar {
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-}
-
-    .sidebar button {
-        display: block;
-        width:200px;
-        color: black;
-        padding: 16px;
-        border: none;
-        text-decoration: none;
-    }
-
-        .sidebar button.active {
-            background-color: #04AA6D;
-            color: white;
-        }
-
-        .sidebar button:hover:not(.active) {
-            background-color: #555;
-            color: white;
-        }
-
-div.content {
-    margin-left: 200px;
-    padding: 1px 16px;
-    height: 1000px;
-}
-
-@media screen and (max-width: 700px) {
-    .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-    }
-
-        .sidebar button {
-            float: left;
-        }
-
-    div.content {
-        margin-left: 0;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    .sidebar button {
-        text-align: center;
-        float: none;
-    }
-}
-
-iframe {
-    visibility: hidden;
-    
-}
+﻿
