--- a/Projeto_Final/HTMLCSS/main.cshtml
+++ b/Projeto_Final/HTMLCSS/main.cshtml
@@ -8,15 +8,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
     <link rel="stylesheet" href="~/HTMLCSS/CSS/main.css" />
     <title>CENAI</title>
 </head>
 <body div class="bg">
     <div class="sidebar">
-        <button class="active" href="">Home</button>
-        <button onclick="poof('registro')">Registro</button>
-        <button href="#contact">Contact</button>
-        <button href="#about">About</button>
+        <a class="active" href="~/HTMLCSS/main.cshtml">Pagina Inicial</a>
+        <a href="~/HTMLCSS/registro.cshtml">Registro</a>
+        <a href="~/HTMLCSS/Listagem.cshtml">Listagem</a>
+        <a href="#about">About</a>
     </div>
 
     <div class="content" id="content">
