--- a/Projeto_Final/HTMLCSS/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/registro.cshtml
@@ -10,14 +10,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
     <link rel="stylesheet" href="~/HTMLCSS/CSS/registro.css" />
-    
+
     <title>CENAI</title>
 </head>
 <body div class="bg">
-    <header>
+    <div class="sidebar">
+        <a href="~/HTMLCSS/main.cshtml">Pagina Inicial</a>
+        <a class="active" href="~/HTMLCSS/registro.cshtml">Registro</a>
+        <a href="~/HTMLCSS/Listagem.cshtml">Listagem</a>
+        <a href="#about">About</a>
+    </div>
 
-    </header>
     <section>
         <aside>
             <form method="post" onsubmit="return checkPassword(this);" action="~/HTMLCSS/temps/temp_reg.cshtml">
