--- a/Projeto_Final/HTMLCSS/temps/temp_reg.cshtml
+++ b/Projeto_Final/HTMLCSS/temps/temp_reg.cshtml
@@ -18,6 +18,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
     <link rel="stylesheet" href="~/HTMLCSS/CSS/registro.css" />
 
     <title>CENAI</title>
