--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -12,7 +12,7 @@
     <title>CENAI</title>
 </head>
 <body div class="bg">
-    <form method="post">
+    <form method="post" action="~/HTMLCSS/main.cshtml">
         <div class="container">
             <div class="login">
                 <center>
@@ -22,8 +22,8 @@
                     <br />
                     <input type="password" id="senhaid" class="campo_senha" placeholder="senha" minlength="6" required />
                     <br />
-                    <input type="submit" placeholder="LOGAR" />
-                    <br />
+                    <input type="submit" value="LOGAR" /></a>
+                    
                 </center>
 
             </div>
