--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -12,15 +12,15 @@
     <title>CENAI</title>
 </head>
 <body div class="bg">
-    <form method="post" action="~/HTMLCSS/main.cshtml">
+    <form method="post" action="~/HTMLCSS/temps/temp_index.cshtml">
         <div class="container">
             <div class="login">
                 <center>
                     <img src="~/IMG/cenai.png" /><br />
                     <tagline>Bem-vindo!</tagline><br />
-                    <input type="text" id="cpfid" class="campo_cpf" placeholder="CPF apenas numeros" maxlength="11" required />
+                    <input type="text" id="cpfid" name="cpfid" class="campo_cpf" placeholder="CPF apenas numeros" maxlength="11" required />
                     <br />
-                    <input type="password" id="senhaid" class="campo_senha" placeholder="senha" minlength="6" required />
+                    <input type="password" id="senhaid" name="senhaid" class="campo_senha" placeholder="senha" minlength="6" maxlength="16" required />
                     <br />
                     <input type="submit" value="LOGAR" /></a>
                     
