--- a/Projeto_Final/HTMLCSS/main.cshtml
+++ b/Projeto_Final/HTMLCSS/main.cshtml
@@ -25,17 +25,15 @@
 <body div class="bg">
     <div class="sidebar">
         <a class="active" href="~/HTMLCSS/main.cshtml">Pagina Inicial</a>
-        <a href="~/HTMLCSS/registro.cshtml">Registro</a>
-        <a href="~/HTMLCSS/Listagem.cshtml">Listagem</a>
+        <a href="~/HTMLCSS/temps/temp_regII.cshtml">Registro de Usuarios</a>
+        <a href="~/HTMLCSS/temps/temp_list.cshtml">Listagem de Usuarios</a>
         <a onclick="LogOff()">Fazer Logoff</a>
     </div>
 
     <div class="content" id="content">
         @if (logado)
         {
-            <h1>Você está Logado</h1>
-            //Imprime o valor do cookie
-            //cookie.Value.ToString();
+            
             <p>Seu nível de permissão é: @cookie.Value.ToString()</p>
             <br />
             <br />
