--- a/Projeto_Final/HTMLCSS/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/registro.cshtml
@@ -19,9 +19,9 @@
 <section>
         <div class="sidebar">
             <a href="~/HTMLCSS/main.cshtml">Pagina Inicial</a>
-            <a class="active" href="~/HTMLCSS/registro.cshtml">Registro</a>
-            <a href="~/HTMLCSS/Listagem.cshtml">Listagem</a>
-            <a href="#about">About</a>
+            <a class="active" href="~/HTMLCSS/registro.cshtml">Registro de Usuarios</a>
+            <a href="~/HTMLCSS/Listagem.cshtml">Listagem de Usuarios</a>
+            <a onclick="LogOff()">Fazer Logoff</a>
         </div>
         <aside>
             <div class="content">
