--- a/Projeto_Final/HTMLCSS/CSS/sidebar.css
+++ b/Projeto_Final/HTMLCSS/CSS/sidebar.css
@@ -10,7 +10,7 @@
     background-color: #f1f1f1;
     position: fixed;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
 }
 
     .sidebar a {
@@ -27,10 +27,10 @@
             color: white;
         }
 
-        .sidebar a:hover:not(.active) {
-            background-color: #b3ddd9;
-            color: white;
-        }
+            .sidebar a:hover:not(.active) {
+                background-color: #b3ddd9;
+                color: white;
+            }
 
 div.content {
     margin-left: 200px;
