--- a/Projeto_Final/HTMLCSS/main.cshtml
+++ b/Projeto_Final/HTMLCSS/main.cshtml
@@ -27,7 +27,7 @@
         <a class="active" href="~/HTMLCSS/main.cshtml">Pagina Inicial</a>
         <a href="~/HTMLCSS/temps/temp_regII.cshtml">Registro de Usuarios</a>
         <a href="~/HTMLCSS/temps/temp_list.cshtml">Listagem de Usuarios</a>
-        <a onclick="LogOff()">Fazer Logoff</a>
+        <a class="logoff" onclick="LogOff()">Fazer Logoff</a>
     </div>
 
     <div class="content" id="content">
