--- a/Projeto_Final/HTMLCSS/temps/temp_reg.cshtml
+++ b/Projeto_Final/HTMLCSS/temps/temp_reg.cshtml
@@ -29,7 +29,7 @@
             <a href="~/HTMLCSS/main.cshtml">Pagina Inicial</a>
             <a class="active" href="~/HTMLCSS/registro.cshtml">Registro de Usuarios</a>
             <a href="~/HTMLCSS/Listagem.cshtml">Listagem de Usuarios</a>
-            <a onclick="LogOff()">Fazer Logoff</a>
+            <a class="logoff" onclick="LogOff()">Fazer Logoff</a>
         </div>
         <aside>
             <div class="content">
