--- a/Projeto_Final/HTMLCSS/CSS/registro.css
+++ b/Projeto_Final/HTMLCSS/CSS/registro.css
@@ -1,12 +1,14 @@
 ﻿
 body, html {
     min-height: 100%;
+
 }
 
 .bg {
     background-image: url(../../IMG/fundo_registro.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-y: hidden;
 }
 
 .container {
@@ -34,7 +36,11 @@ label {
     font-weight: bold;
 }
 
-input[type=email], input[type=password] {
+input[type=email],
+input[type=password],
+input[type=text],
+input[type=tel],
+select {
     background-color: #e6e6e6;
     border: none;
     width: 200px;
@@ -45,15 +51,7 @@ input[type=email], input[type=password] {
 }
 
 
-input[type=text], input[type=tel], select {
-    background-color: #e6e6e6;
-    border: none;
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border-radius: 5px;
-}
+
 
 input[type=submit]{
     background-color: #c5f6f1;
@@ -63,8 +61,10 @@ input[type=submit]{
     margin: 8px 0;
     box-sizing: border-box;
     border-radius: 5px;
+    
 }
 
 input[type=submit]:hover{
     background-color: #b3ddd9;
 }
+
