--- a/Projeto_Final/HTMLCSS/CSS/Listagem.css
+++ b/Projeto_Final/HTMLCSS/CSS/Listagem.css
@@ -4,6 +4,20 @@ body, html {
     min-height: 100%;
 }
 
+button.btn_edit,
+button.btn_remove {
+    border: none;
+    border-radius: 5px;
+    background-color: white;
+    color: #808080;
+}
+
+button:nth-of-type(2n, 3n) {
+    background-color: #808080;
+    color: white;
+}
+    
+
 input[type=submit] {
     background-color: #c5f6f1;
     border: none;
